--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="title">HTML & CSS foundations</h1>
             <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
             <footer class="author">
-                <img class="author-img" src="/assets/imgs/image-avatar.webp" alt="Greg Hooper">
+                <img class="author-img" src="./assets/imgs/image-avatar.webp" alt="Greg Hooper">
                 <p class="author-name">Greg Hooper</p>
             </footer>
         </article>
